<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/detailShimmer"
            style="@style/ShimmerTheme"
            tools:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/detail_placeholder"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.Material3.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:contentScrim="?android:statusBarColor"
                app:extraMultilineHeightEnabled="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
                app:maxLines="2"
                app:titleTextEllipsize="end"
                app:toolbarId="@id/toolbar">

                <include
                    android:id="@+id/detailHeader"
                    layout="@layout/detail_info_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"/>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.Material3.Light"
                    app:titleTextAppearance="@style/TextAppearance.Material3.BodyLarge"
                    app:titleTextColor="@color/white">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="top|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvDetail"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:cardElevation="12dp"
                    app:strokeColor="?colorPrimaryInverse"
                    app:strokeWidth="2dp"
                    app:cardUseCompatPadding="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:cardBackgroundColor="?attr/colorOnPrimary">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_margin="10dp"
                        android:layout_gravity="top|center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtvTag"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            app:layout_constraintHorizontal_bias="0.0"
                            android:textAlignment="textStart"
                            android:textStyle="italic"
                            tools:text="Abcdefghijk"
                            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtvOverviewTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_text"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="10dp"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/mtvTag"
                            app:layout_constraintVertical_bias="0.0"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtvOverview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:letterSpacing="0.01"
                            android:layout_marginHorizontal="10dp"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/mtvOverviewTitle"
                            app:layout_constraintVertical_bias="0.0"
                            tools:text="After reuniting with Gwen Stacy, Brooklyn’s full-time, friendly neighborhood Spider-Man is catapulted across the Multiverse, where he encounters the Spider Society, a team of Spider-People charged with protecting the Multiverse’s very existence. But when the heroes clash on how to handle a new threat, Miles finds himself pitted against the other Spiders and must set out on his own to save those he loves most."/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtvTrailerTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailer_title"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@id/mtvOverview"
                            app:layout_constraintVertical_bias="0.0"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcvTrailer"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/mtvTrailerTitle"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            android:layout_marginTop="4dp"
                            android:layout_marginHorizontal="10dp"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="1"
                            android:overScrollMode="never"
                            android:nestedScrollingEnabled="false"
                            tools:listitem="@layout/trailer_item"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtvCastTitle"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/rcvTrailer"
                            android:layout_marginTop="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintVertical_bias="0.0"
                            android:text="@string/top_billed_cast_title"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcvCast"
                            android:layout_marginHorizontal="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/mtvCastTitle"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            android:layout_width="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="1"
                            android:overScrollMode="never"
                            android:nestedScrollingEnabled="false"
                            tools:listitem="@layout/cast_item"
                            android:orientation="horizontal"
                            android:layout_marginTop="4dp"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtvReviewTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/review_text"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textStyle="bold"
                            android:layout_marginTop="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/rcvCast"
                            app:layout_constraintVertical_bias="0.0"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcvReview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:nestedScrollingEnabled="false"
                            android:overScrollMode="never"
                            app:layout_constraintVertical_bias="0.0"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/mtvReviewTitle"
                            app:spanCount="1"
                            tools:listitem="@layout/review_item"/>

                        <include
                            android:id="@+id/bottomLoading"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@id/rcvReview"
                            app:layout_constraintEnd_toEndOf="@id/rcvReview"
                            app:layout_constraintTop_toBottomOf="@id/rcvReview"
                            app:layout_constraintBottom_toBottomOf="parent"
                            layout="@layout/bottom_loading"/>

                        <include
                            android:id="@+id/stuckView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@id/rcvReview"
                            app:layout_constraintEnd_toEndOf="@id/rcvReview"
                            app:layout_constraintTop_toBottomOf="@id/rcvReview"
                            app:layout_constraintBottom_toBottomOf="parent"
                            layout="@layout/bottom_stuck"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>